RESOLVED FIXED228618
Clicking an HTMLLinkElement should not trigger a navigation
https://bugs.webkit.org/show_bug.cgi?id=228618
Summary Clicking an HTMLLinkElement should not trigger a navigation
Chris Dumez
Reported 2021-07-29 16:07:02 PDT
Clicking an HTMLLinkElement should not trigger a navigation because HTMLLinkElement has no activation behavior as per the HTML specification: - https://html.spec.whatwg.org/multipage/semantics.html#htmllinkelement Firefox and Chrome follow the specification here.
Attachments
Patch (11.70 KB, patch)
2021-07-29 16:10 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2021-07-29 16:10:44 PDT
EWS
Comment 2 2021-07-30 09:41:46 PDT
Committed r280479 (240114@main): <https://commits.webkit.org/240114@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 434583 [details].
Radar WebKit Bug Importer
Comment 3 2021-07-30 09:42:18 PDT
Note You need to log in before you can comment on or make changes to this bug.