Clicking an HTMLLinkElement should not trigger a navigation https://bugs.webkit.org/show_bug.cgi?id=228618

Reviewed by Sam Weinig.

LayoutTests/imported/w3c:

Rebaseline WPT test now that more checks are passing.

* web-platform-tests/html/infrastructure/urls/resolving-urls/query-encoding/navigation.sub-expected.txt:

Source/WebCore:

Clicking an HTMLLinkElement should not trigger a navigation because HTMLLinkElement has no activation
behavior as per the HTML specification:
- https://html.spec.whatwg.org/multipage/semantics.html#htmllinkelement

Firefox and Chrome follow the specification here.

No new tests, updated/rebaselined existing tests.

* html/HTMLLinkElement.cpp:
* html/HTMLLinkElement.h:

LayoutTests:

Update existing tests to reflect behavior change. I verified that the tests were failing
in both Firefox and Chrome prior to me updating them.

* fast/dom/html-link-element-activation-behavior-on-element-click-expected.txt:
* fast/dom/html-link-element-activation-behavior-on-element-click.html:
* fast/dom/html-link-element-activation-behavior-on-mouse-click-expected.txt:
* fast/dom/html-link-element-activation-behavior-on-mouse-click.html:
* fast/dom/resources/html-link-element-activation-behavior-on-element-click-step1.html:
* fast/dom/resources/html-link-element-activation-behavior-on-mouse-click-step1.html:
* fast/dom/resources/html-link-element-activation-behavior-target.html:


Canonical link: https://commits.webkit.org/240114@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@280479 268f45cc-cd09-0410-ab3c-d52691b4dbfc