Source/WebCore/html/HTMLLinkElement.cpp
@@ -565,27 +565,6 @@ bool HTMLLinkElement::isURLAttribute(const Attribute& attribute) const
     return attribute.name().localName() == hrefAttr || HTMLElement::isURLAttribute(attribute);
 }
 
-void HTMLLinkElement::defaultEventHandler(Event& event)
-{
-    if (MouseEvent::canTriggerActivationBehavior(event)) {
-        handleClick(event);
-        return;
-    }
-    HTMLElement::defaultEventHandler(event);
-}
-
-void HTMLLinkElement::handleClick(Event& event)
-{
-    event.setDefaultHandled();
-    URL url = href();
-    if (url.isNull())
-        return;
-    RefPtr<Frame> frame = document().frame();
-    if (!frame)
-        return;
-    frame->loader().changeLocation(url, target(), &event, ReferrerPolicy::EmptyString, document().shouldOpenExternalURLsPolicyToPropagate());
-}
-
 URL HTMLLinkElement::href() const
 {
     return document().completeURL(attributeWithoutSynchronization(hrefAttr));
